kubernetes-demos/03-ingress/04-path-based-routing/src/traefik-stripprefix-middleware.yaml
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: jaeger-stripprefix
#   namespace: otel-demo
# spec:
#   stripPrefix:
#     # Remove these prefixes from the request path before forwarding
#     prefixes:
#       - /jaeger
    
#     # forceSlash: false - Don't add trailing slash after stripping
#     # Example: /jaeger/api/services → /api/services (not /api/services/)
#     forceSlash: false

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jaeger-rewrite
  namespace: otel-demo
spec:
  replacePathRegex:
    regex: "^/jaeger(/|$)(.*)"
    replacement: "/jaeger/ui/$2"
